[tool.poetry]
name = "gas-calculator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
# packages = [{include = "gas_calculator"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
marshmallow = "^3.19.0"
tronpy = "^0.4.0"
web3 = "^6.1.0"
uvloop = "^0.17.0"
loguru = "^0.7.0"
sentry-sdk = "^1.19.1"
pydantic = "^1.10.7"
pydantic-computed = "^0.2.1"


[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
pytest-aiohttp = "^1.0.4"
pytest-html = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
